gccida/g1/get_attr_length_immediate
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14283:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v18 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14288:29: error: too many arguments provided to function-like macro invocation
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/toplev.h:52:9: note: macro 'fatal_insn_not_found' defined here
#define fatal_insn_not_found(insn) \
        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14288:1: error: use of undeclared identifier 'fatal_insn_not_found'; did you mean '_fatal_insn_not_found'?
fatal_insn_not_found( insn, "insn-attrtab.c", 14632, "get_attr_length_immediate"); 
^~~~~~~~~~~~~~~~~~~~
_fatal_insn_not_found
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/toplev.h:40:13: note: '_fatal_insn_not_found' declared here
extern void _fatal_insn_not_found       PARAMS ((struct rtx_def *,
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14518:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = symbolic_operand( recog_data_0.operand[1], SImode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14524:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( flag_pic && symbolic_operand( recog_data_0.operand[1], SImode) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14575:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( aligned_operand( recog_data_0.operand[1], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14637:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !q_regs_operand( recog_data_0.operand[0], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14668:24: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = symbolic_operand( recog_data_0.operand[1], DImode); 
                       ^~~~~~~~~~~~
                       recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14674:36: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( flag_pic && symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                   ^~~~~~~~~~~~
                                   recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14677:41: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
else if ( flag_pic && symbolic_operand( recog_data_0.operand[1], DImode) ) 
                                        ^~~~~~~~~~~~
                                        recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14720:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( pic_symbolic_operand( recog_data_0.operand[2], DImode) ) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14731:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], DImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14741:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14753:28: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( pic_symbolic_operand( recog_data_0.operand[2], SImode) ) 
                           ^~~~~~~~~~~~
                           recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14766:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], SImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14771:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = incdec_operand( recog_data_0.operand[2], HImode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14785:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], HImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14790:22: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
v3 = incdec_operand( recog_data_0.operand[2], QImode); 
                     ^~~~~~~~~~~~
                     recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/insn-attrtab.c:14804:23: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
if ( !incdec_operand( recog_data_0.operand[2], QImode) ) 
                      ^~~~~~~~~~~~
                      recog_data
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/get_attr_length_immediate/src/obj/insn-attrtab.o] Error 1
